declarative/applications/account/base/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: account-env-header
spec:
  headers:
    customResponseHeaders:
      X-Environment: unknown
