declarative/applications/account/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account
spec:
  selector:
    app: account
  ports:
    - name: http
      port: 80
      targetPort: http
